# osrepo

./: .gitignore  Cargo.toml  README.md  TODO.md  osrepo.old.yml  osrepo.yml  repo_structure.yml  struct.json  struct.yml  test.yml
osrepo-legacy/: .editorconfig  Makefile  TODO.md
osrepo-legacy/osrepo/: app.py  pyproject.toml
osrepo-legacy/osrepo/modules/: cli.py  download.py  entry.py  fmt.py  repo.py  run.py  search.py  select.py  tools.py
osrepo-legacy/osrepo/repo/: community.yml
repos/: test.yml
src/: db.rs  main.rs  utils.rs
src/db/: db_deserializer.rs  db_included_repo.rs  db_index.rs  mod.rs  repo.rs  repo_deserializer.rs  repo_pragma.rs  search.rs  update.rs
src/db/entry/: entry_deserializer.rs  mod.rs
src/db/entry/entry_pragma/: mod.rs
src/db/entry/version/: download.rs  mod.rs  version_deserializer.rs
src/db/repo/: entry.rs  entry_deserializer.rs  mod.rs  repo_deserializer.rs
src/db/repo/entry/: entry_deserializer.rs  mod.rs  version.rs  version_deserializer.rs
src/db/repo/entry/version/: download.rs  mod.rs  version_deserializer.rs
src/db/repo/pragma/: mod.rs  pragma_deserializer.rs
src/db/repo_pragma/: mod.rs
src/utils/: download.rs  fs.rs  mod.rs
