[package]
name = "osrepo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.24"
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.16.2"
tokio = { version = "1.19.2", features = ["full"] }
strsim = "0.10.0"
itertools = "0.10.3"